delete schedule in folder

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/schedule.html">連結</a>
+    <a href="/hw_week1/schedule.html">連結</a>
 </body>
 </html>
