--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>作品集</h1>
-    <a href="/hw_week1/schedule.html">連結</a>
+    <a href="/hw_week1/schedule.html">第一周作業</a>
 </body>
 </html>
