--- a/hw_week1/schedule.html
+++ b/hw_week1/schedule.html
@@ -133,7 +133,7 @@
                 <td rowspan="8"> 80 </td>
                 <td rowspan="4"> 12:00<br>12:40</td>
                 <td rowspan="4" colspan="5">午餐時間 </td>
-                <td rowspan="10" colspan="2"><br><br><br>綜合活動<br><br><br> </td>
+                <td rowspan="10" colspan="2"><br><br><br><br>綜合活動<br><br><br><br> </td>
                 <td rowspan="10">120 </td>
                 <td rowspan="10">劉晨華 </td>
             </tr>
@@ -160,7 +160,7 @@
             <tr></tr>
             <tr>
                 <td rowspan="6">彈性時間</td>
-                <td rowspan="3">彈性課程</td>
+                <td rowspan="3"><br>彈性課程</td>
                 <td rowspan="3">160</td>
                 <td rowspan="3">劉晨華</td>
             </tr>
