--- a/hw_week1/schedule.html
+++ b/hw_week1/schedule.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <table border="3">
-        <caption>宜蘭縣成功國民小學九十八學年度日課表</caption>
+        <caption><strong>宜蘭縣成功國民小學九十八學年度日課表</strong></caption>
         <thead>
             <tr>
                 <td>時段</td>
@@ -141,8 +141,8 @@
             <tr></tr>
             <tr></tr>
             <tr>
-                <td rowspan="2"> 12:40<br>13:20</td>
-                <td rowspan="2" colspan="5">午餐時間 </td>
+                <td rowspan="4"> 12:40<br>13:20</td>
+                <td rowspan="4" colspan="5">午餐時間 </td>
             </tr>
             <tr></tr>
             <tr></tr>
