--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="wrap" id="header1" style=" background-image: url(img/asset\ 1.webp);height: 700px;">
+        <div class="wrap" id="header1" style=" background-image: url(img/asset\ 1.webp); height: 443px;">
             <div class="menu" id="top">
                 <img src="img/asset 0.webp" alt="" >
             </div>
@@ -46,8 +46,8 @@
         <div class="wrap">
             <div class="intro" >
                 <img src="img/capture1.png" alt="" style="padding-top: 50px;">
-               <h2 style="font-weight: bold; font-size: 30px; padding: 15px;">Build School</h2> 
-               <h2 style="font-size: 26px; padding: 15px;">/*我們的理念*/</h2>
+               <h2 style="font-weight: bold; font-size: 30px; padding: 15px;color: black;">Build School</h2> 
+               <h2 style="font-size: 26px; padding: 15px; color: black;">/*我們的理念*/</h2>
                 <p style="font-size: 18px;">Build = 將程式碼編譯及建置成<span style="text-decoration:underline">可執行的軟體</span></p>
                 <p style="font-size: 18px;">Build = <span style="text-decoration:underline">動手做</span></p>
                 <p style="font-size: 18px;">Build = 軟體開發<span style="text-decoration:underline">職涯的打造者</span></p>
@@ -214,27 +214,32 @@
     </body>
     <footer>
         <div class="wrap" style="background-color: #605E5E; height: 3px ;"></div>
-        <div class="wrap">
-            <h2>合作與接洽</h2>
-            <p style="font-size: 16px;">若為企業欲徵才、或非營利組織或公益團體希望參加我們的培訓或公益合作、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</p>
-            <p>Build School​ 青杉人才有限公司 | 青群科技有限公司</p>
-            <p>社團法人台灣青築未來協會 Build the Future</p>
-            <p>(內政部立案 : 台內團字第 1090033261 號)</p>
-            <p>email: contact@build-school.com 電話: 02-66057606</p>
-            <p>​台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)​</p>
+        <div class="wrap" style="background-color: #EEEEEE;">
+            <div class="info">
+                <h5>合作與接洽</h5>
+            </div>
+            <div class="info" >
+                <h5 style="font-size: 16px; text-align: left; width: 300px; font-weight: normal;line-height: 22px;">若為企業欲徵才、或非營利組織或公益團體希望參加我們的培訓或公益合作、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</h5>
+            </div>
+            <div class="info">
+                <p>Build School​ 青杉人才有限公司 | 青群科技有限公司</p>
+                <p>社團法人台灣青築未來協會 Build the Future</p>
+                <p>(內政部立案 : 台內團字第 1090033261 號)</p>
+                <a href="" style="font-size: 13px;text-align: left; margin: 10px; color:black;    text-decoration:none;
+                ">email: contact@build-school.com 電話: 02-66057606</a>
+                <p>​台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)​</p>
+            </div>
         </div>
-        <div class="wrap">
-            <a href="https://www.facebook.com/buildschool.edu/"><img src="img/asset 25.webp" alt="臉書粉絲專頁"></a>
+        <div class="wrap" id="conect" style="background-color: #EEEEEE;">
+            <a href="https://www.facebook.com/buildschool.edu/" style="padding-left: 30px;"><img src="img/asset 25.webp" alt="臉書粉絲專頁"></a>
             <a href="https://www.youtube.com/channel/UC4dTBtbEIwhtKRy2UhkVYig"><img src="img/asset 26.webp" alt="youtube頻道"></a> 
-            <a href="*">隱私權宣告</a>
-            <p>© 2021 by Build School            </p>
+            <a href="*" style="    vertical-align:bottom;
+            display:table-cell; 
+            vertical-align:bottom;">隱私權宣告</a>
+            <p style="margin-left: auto;margin-right: 10px;">© 2021 by Build School            </p>
         </div>
         <div class="wrap">
-            <a href=" #top"><img src="img/asset 33.svg" alt="" style="-moz-transform:scaleY(-1);
-                -webkit-transform:scaleY(-1);
-                -o-transform:scaleY(-1);
-                transform:scaleY(-1);
-                "></a>
+            <a href=" #top"><img src="img/asset 33.svg" alt="" ></a>
         </div>
     </footer>
     
