--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>作品集</h1>
     <a href="/hw_week1/schedule.html">第一周作業</a>
-    
+    <a href="https://leoggcat.github.io/hw_week2/index.html">第二周作業</a>
 </body>
 </html>
