--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -10,8 +10,9 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="wrap" id="header1" style=" background-image: url(img/asset\ 1.webp); height: 443px;">
+    <header style="background-image: url(img/asset\ 1.webp);background-size: 100% auto;
+    background-repeat: no-repeat; ">
+        <div class="wrap" >
             <div class="menu" id="top">
                 <img src="img/asset 0.webp" alt="" >
             </div>
@@ -37,10 +38,27 @@
             <div class="menu">
                 <li><a href="*">歷屆老師</a></li>
             </div>
-                <div class="menu">
-            <li><a href="*">問題洽詢</a></li>
+            <div class="menu">
+                <li><a href="*">問題洽詢</a></li>
+            </div>
+            <div class="ads" style="margin-bottom: 1px; padding-bottom: 1px;">
+                <h3 style="color: white; margin: auto; ">動手做出東西<br/>才能解決問題</h3>
+            </div>
+            <div class="ads" style="margin-top: 1px; padding-top: 1px;">
+                <p style="font-size: 18px; text-align: center;color: white;margin: auto; font-weight: bold;line-height: 30px;">BUILD SOMETHING AND SOLVE THE PROBLEM,<br/>THAT'S MY STYLE</p>
+            </div>            
+            <div class="sign">
+                <a href="*">台北班簡介及報名(2022/4/29)</a>
+            </div>
+            <div class="sign">
+                <a href="*">台北班簡介及報名(2022/4/29)</a>
+            </div>
+            <div class="sign">
+                <a href="*">台北班簡介及報名(2022/4/29)</a>
             </div>
         </div>
+        </div>
+
     </header>
     <body>
         <div class="wrap">
@@ -213,7 +231,7 @@
 
     </body>
     <footer>
-        <div class="wrap" style="background-color: #605E5E; height: 3px ;"></div>
+        <div class="wrap" style="background-color: #605E5E; height: 3px ; margin-top: 5px;"></div>
         <div class="wrap" style="background-color: #EEEEEE;">
             <div class="info">
                 <h5>合作與接洽</h5>
@@ -225,7 +243,7 @@
                 <p>Build School​ 青杉人才有限公司 | 青群科技有限公司</p>
                 <p>社團法人台灣青築未來協會 Build the Future</p>
                 <p>(內政部立案 : 台內團字第 1090033261 號)</p>
-                <a href="" style="font-size: 13px;text-align: left; margin: 10px; color:black;    text-decoration:none;
+                <a href="*" style="font-size: 13px;text-align: left; margin: 10px; color:black;    text-decoration:none;
                 ">email: contact@build-school.com 電話: 02-66057606</a>
                 <p>​台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)​</p>
             </div>
@@ -237,9 +255,6 @@
             display:table-cell; 
             vertical-align:bottom;">隱私權宣告</a>
             <p style="margin-left: auto;margin-right: 10px;">© 2021 by Build School            </p>
-        </div>
-        <div class="wrap">
-            <a href=" #top"><img src="img/asset 33.svg" alt="" ></a>
         </div>
     </footer>
     
