--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -51,10 +51,10 @@
                 <a href="*">台北班簡介及報名(2022/4/29)</a>
             </div>
             <div class="sign">
-                <a href="*">台北班簡介及報名(2022/4/29)</a>
+                <a href="*">新竹班簡介(2022/2/15)</a>
             </div>
             <div class="sign">
-                <a href="*">台北班簡介及報名(2022/4/29)</a>
+                <a href="*">招生說明會報名</a>
             </div>
         </div>
         </div>
