--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -13,12 +13,12 @@
     <header style="background-image: url(img/asset\ 1.webp);background-size: 100% auto;
     background-repeat: no-repeat; ">
         <div class="wrap" >
-            <div class="menu" id="top">
-                <img src="img/asset 0.webp" alt="" >
+            <div class="logo">
+                <a href="*"><img src="img/asset 0.webp" alt="Build school" ></a>
             </div>
-            <div class="menu" style="padding-top: 15px ;">
-                <h1 style="font-size: 30px;">Build School</h1>
-                <p style="font-size: 12px;">developer career builder</p>
+            <div class="logo">
+                <a href="*"><h1 style="font-size: 30px;        line-height: 30px;padding-top: 10px;">Build School</h1></a>
+                <a href="*"><p style="font-size: 12px;">developer career builder</p></a>
             </div>
             <div class="menu">
                 <li><a href="*">台北班簡介</a></li>
