--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -84,7 +84,7 @@
                 <h3>動手實作才是真學習</h3>
             </div>
             <div class="intro">
-                <img src="img/asset 3.webp" alt="" style="padding-top: 50px;">
+                <img src="img/asset 3.webp" alt="就業銜接" style="padding-top: 50px;">
                 <h3>就業銜接</h3>
             </div>
             <div class="intro">
@@ -96,7 +96,7 @@
                 <p>每一位在軟體開發上有實務經驗的企業導師，他們是各大企業的主管、資深軟體工程師或 CTO，其人際連結及資源將帶給同學更多更好的就業機會，你將比別人站得更高，看得更遠!</p>
             </div>
             <div class="intro">
-                <img src="img/asset 4.webp" alt="">
+                <img src="img/asset 4.webp" alt="連結及影響力">
                 <h3>連結及影響力</h3>
             </div>
         </div>
@@ -146,30 +146,30 @@
         <div class="wrap" id="h2background">
             <h2 >在課程及作品實作中，將採用這些工具 - 熟悉實務上軟體開發團隊的運作、分工及真實專案的流程</h2>
         </div>
-        <div class="wrap">
+        <div class="wrap" >
             <div class="tool" id="using">
-                <img src="img/asset 8.webp" alt="版本控管及程式碼管理">
+                <img src="img/asset 8.webp" alt="git">
             </div>
             <div class="tool" id="using" style="height: 80;">
-                <img src="img/asset 10.webp" alt="作品開發及團隊管理">
+                <img src="img/asset 10.webp" alt="VS2019">
             </div>
             <div class="tool" id="using">
-                <img src="img/asset 12.webp" alt="雲端平台及服務">
+                <img src="img/asset 12.webp" alt="AZURE">
             </div>
             <div class="tool" id="using">
-                <img src="img/asset 14.webp" alt="團隊溝通協作及通知">
+                <img src="img/asset 14.webp" alt="Teams">
             </div>
             <div class="tool" id="using">
-                <img src="img/asset 9.webp" alt="版本控管及程式碼管理">
+                <img src="img/asset 9.webp" alt="Github">
             </div>
             <div class="tool" id="using">
-                <img src="img/asset 11.webp" alt="作品開發及團隊管理">
+                <img src="img/asset 11.webp" alt="trello">
             </div>
             <div class="tool" id="using">
-                <img src="img/asset 13.webp" alt="雲端平台及服務">
+                <img src="img/asset 13.webp" alt="雲SQL">
             </div>
             <div class="tool" id="using">
-                <img src="img/asset 15.webp" alt="團隊溝通協作及通知">
+                <img src="img/asset 15.webp" alt="Slack">
             </div>
             <div class="tool">
                 <h3>版本控管及程式碼管理</h3>
