--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -143,7 +143,7 @@
                 </ul>
             </div>
         </div>
-        <div class="wrap" id="h2background">
+        <div class="wrap" id="h2background" style="margin-bottom: 30px;">
             <h2 >在課程及作品實作中，將採用這些工具 - 熟悉實務上軟體開發團隊的運作、分工及真實專案的流程</h2>
         </div>
         <div class="wrap" >
@@ -237,7 +237,7 @@
                 <h5>合作與接洽</h5>
             </div>
             <div class="info" >
-                <h5 style="font-size: 16px; text-align: left; width: 300px; font-weight: normal;line-height: 22px;">若為企業欲徵才、或非營利組織或公益團體希望參加我們的培訓或公益合作、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</h5>
+                <h5 style="font-size: 16px; text-align: left; width: 400px; font-weight: normal;line-height: 22px;">若為企業欲徵才、或非營利組織或公益團體希望參加我們的培訓或公益合作、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</h5>
             </div>
             <div class="info">
                 <p>Build School​ 青杉人才有限公司 | 青群科技有限公司</p>
