--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -251,10 +251,8 @@
         <div class="wrap" id="conect" style="background-color: #EEEEEE;">
             <a href="https://www.facebook.com/buildschool.edu/" style="padding-left: 30px;"><img src="img/asset 25.webp" alt="臉書粉絲專頁"></a>
             <a href="https://www.youtube.com/channel/UC4dTBtbEIwhtKRy2UhkVYig"><img src="img/asset 26.webp" alt="youtube頻道"></a> 
-            <a href="*" style="    vertical-align:bottom;
-            display:table-cell; 
-            vertical-align:bottom;">隱私權宣告</a>
-            <p style="margin-left: auto;margin-right: 10px;">© 2021 by Build School            </p>
+            <a href="*" style="    padding-top: 15px; padding-bottom: 0px;">隱私權宣告</a>
+            <p style="margin-left: auto;margin-right: 10px;padding-top: 15px; padding-bottom: 0px;">© 2021 by Build School            </p>
         </div>
     </footer>
     
