--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -21,25 +21,25 @@
                 <a href="*"><p style="font-size: 12px;">developer career builder</p></a>
             </div>
             <div class="menu">
-                <li><a href="*">台北班簡介</a></li>
+                <nav><a href="*">台北班簡介</a></nav>
             </div>
             <div class="menu" >
-                <li><a href="*">新竹班簡介</a></li>
+                <nav><a href="*">新竹班簡介</a></nav>
             </div>
             <div class="menu">
-                <li><a href="*">Microsoft證照</a></li>
+                <nav><a href="*">Microsoft證照</a></nav>
             </div>
             <div class="menu">
-                <li><a href="*">校友會-青築未來協會Build the Future</a></li>
+                <nav><a href="*">校友會-青築未來協會Build the Future</a></nav>
             </div>
             <div class="menu">
-                <li><a href="*">Blog</a></li>
+                <nav><a href="*">Blog</a></nav>
             </div>
             <div class="menu">
-                <li><a href="*">歷屆老師</a></li>
+                <nav><a href="*">歷屆老師</a></nav>
             </div>
             <div class="menu">
-                <li><a href="*">問題洽詢</a></li>
+                <nav><a href="*">問題洽詢</a></nav>
             </div>
             <div class="ads" style="margin-bottom: 1px; padding-bottom: 1px;">
                 <h3 style="color: white; margin: auto; ">動手做出東西<br/>才能解決問題</h3>
