--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -64,7 +64,7 @@
         <div class="wrap">
             <div class="intro" >
                 <img src="img/capture1.png" alt="" style="padding-top: 50px;">
-               <h2 style="font-weight: bold; font-size: 30px; padding: 15px;color: black;">Build School</h2> 
+               <h1 style="font-weight: bold; font-size: 30px; padding: 15px;color: black;">Build School</h1> 
                <h2 style="font-size: 26px; padding: 15px; color: black;">/*我們的理念*/</h2>
                 <p style="font-size: 18px;">Build = 將程式碼編譯及建置成<span style="text-decoration:underline">可執行的軟體</span></p>
                 <p style="font-size: 18px;">Build = <span style="text-decoration:underline">動手做</span></p>
@@ -201,7 +201,7 @@
             <h2 >我們的講師及企業導師擁有在這些公司的工作經歷、擔任主管或資深工程師
             </h2>
         </div>
-        <div class="wrap">
+        <div class="wrap" style="padding-bottom: 10px;">
             <div class="company">
                 <img src="img/asset 17.webp" alt="微軟">
             </div>
