--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -63,7 +63,7 @@
     <body>
         <div class="wrap">
             <div class="intro" >
-                <img src="img/capture1.png" alt="" style="padding-top: 50px;">
+                <img src="img/capture1.png" alt="我們的理念" style="padding-top: 50px;">
                <h1 style="font-weight: bold; font-size: 30px; padding: 15px;color: black;">Build School</h1> 
                <h2 style="font-size: 26px; padding: 15px; color: black;">/*我們的理念*/</h2>
                 <p style="font-size: 18px;">Build = 將程式碼編譯及建置成<span style="text-decoration:underline">可執行的軟體</span></p>
