--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -248,7 +248,7 @@
                 <p>​台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)​</p>
             </div>
         </div>
-        <div class="wrap" id="conect" style="background-color: #EEEEEE;">
+        <div class="wrap" id="contact" style="background-color: #EEEEEE;">
             <a href="https://www.facebook.com/buildschool.edu/" style="padding-left: 30px;"><img src="img/asset 25.webp" alt="臉書粉絲專頁"></a>
             <a href="https://www.youtube.com/channel/UC4dTBtbEIwhtKRy2UhkVYig"><img src="img/asset 26.webp" alt="youtube頻道"></a> 
             <a href="*" style="    padding-top: 15px; padding-bottom: 0px;">隱私權宣告</a>
