--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -10,8 +10,7 @@
     </style>
 </head>
 <body>
-    <header style="background-image: url(img/asset\ 1.webp);background-size: 100% auto;
-    background-repeat: no-repeat; ">
+    <header>
         <div class="wrap" >
             <div class="logo">
                 <a href="*"><img src="img/asset 0.webp" alt="Build school" ></a>
@@ -64,8 +63,8 @@
         <div class="wrap">
             <div class="intro" >
                 <img src="img/capture1.png" alt="我們的理念" style="padding-top: 50px;">
-               <h1 style="font-weight: bold; font-size: 30px; padding: 15px;color: black;">Build School</h1> 
-               <h2 style="font-size: 26px; padding: 15px; color: black;">/*我們的理念*/</h2>
+                <h1 style="font-weight: bold; font-size: 30px; padding: 15px;color: black;">Build School</h1> 
+                <h2 style="font-size: 26px; padding: 15px; color: black;">/*我們的理念*/</h2>
                 <p style="font-size: 18px;">Build = 將程式碼編譯及建置成<span style="text-decoration:underline">可執行的軟體</span></p>
                 <p style="font-size: 18px;">Build = <span style="text-decoration:underline">動手做</span></p>
                 <p style="font-size: 18px;">Build = 軟體開發<span style="text-decoration:underline">職涯的打造者</span></p>
@@ -237,7 +236,7 @@
                 <h5>合作與接洽</h5>
             </div>
             <div class="info" >
-                <h5 style="font-size: 16px; text-align: left; width: 400px; font-weight: normal;line-height: 22px;">若為企業欲徵才、或非營利組織或公益團體希望參加我們的培訓或公益合作、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</h5>
+                <h5>若為企業欲徵才、或非營利組織或公益團體希望參加我們的培訓或公益合作、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</h5>
             </div>
             <div class="info">
                 <p>Build School​ 青杉人才有限公司 | 青群科技有限公司</p>
@@ -248,11 +247,11 @@
                 <p>​台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)​</p>
             </div>
         </div>
-        <div class="wrap" id="contact" style="background-color: #EEEEEE;">
+        <div class="wrap" id="contact" >
             <a href="https://www.facebook.com/buildschool.edu/" style="padding-left: 30px;"><img src="img/asset 25.webp" alt="臉書粉絲專頁"></a>
             <a href="https://www.youtube.com/channel/UC4dTBtbEIwhtKRy2UhkVYig"><img src="img/asset 26.webp" alt="youtube頻道"></a> 
             <a href="*" style="    padding-top: 15px; padding-bottom: 0px;">隱私權宣告</a>
-            <p style="margin-left: auto;margin-right: 10px;padding-top: 15px; padding-bottom: 0px;">© 2021 by Build School            </p>
+            <p style="margin-left: auto;margin-right: 10px;padding-top: 15px; padding-bottom: 0px;">© 2021 by Build School</p>
         </div>
     </footer>
     
