--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -20,25 +20,15 @@
                 <a href="*"><p style="font-size: 12px;">developer career builder</p></a>
             </div>
             <div class="menu">
-                <nav><a href="*">台北班簡介</a></nav>
-            </div>
-            <div class="menu" >
-                <nav><a href="*">新竹班簡介</a></nav>
-            </div>
-            <div class="menu">
-                <nav><a href="*">Microsoft證照</a></nav>
-            </div>
-            <div class="menu">
-                <nav><a href="*">校友會-青築未來協會Build the Future</a></nav>
-            </div>
-            <div class="menu">
-                <nav><a href="*">Blog</a></nav>
-            </div>
-            <div class="menu">
-                <nav><a href="*">歷屆老師</a></nav>
-            </div>
-            <div class="menu">
-                <nav><a href="*">問題洽詢</a></nav>
+                <nav>
+                    <a href="*">台北班簡介</a>
+                    <a href="*">新竹班簡介</a>
+                    <a href="*">Microsoft證照</a>
+                    <a href="*">校友會-青築未來協會Build the Future</a>
+                    <a href="*">Blog</a>
+                    <a href="*">歷屆老師</a>
+                    <a href="*">問題洽詢</a>
+                </nav>
             </div>
             <div class="ads" style="margin-bottom: 1px; padding-bottom: 1px;">
                 <h3 style="color: white; margin: auto; ">動手做出東西<br/>才能解決問題</h3>
