fix (nav company)

--- a/hw_week2/index.html
+++ b/hw_week2/index.html
@@ -13,21 +13,21 @@
     <header>
         <div class="wrap" >
             <div class="logo">
-                <a href="*"><img src="img/asset 0.webp" alt="Build school" ></a>
+                <a href="#"><img src="img/asset 0.webp" alt="Build school" ></a>
             </div>
             <div class="logo">
-                <a href="*"><h1 style="font-size: 30px;        line-height: 30px;padding-top: 10px;">Build School</h1></a>
-                <a href="*"><p style="font-size: 12px;">developer career builder</p></a>
+                <a href="#"><h1 style="font-size: 30px;        line-height: 30px;padding-top: 10px;">Build School</h1></a>
+                <a href="#"><p style="font-size: 12px;">developer career builder</p></a>
             </div>
             <div class="menu">
                 <nav>
-                    <a href="*">台北班簡介</a>
-                    <a href="*">新竹班簡介</a>
-                    <a href="*">Microsoft證照</a>
-                    <a href="*">校友會-青築未來協會Build the Future</a>
-                    <a href="*">Blog</a>
-                    <a href="*">歷屆老師</a>
-                    <a href="*">問題洽詢</a>
+                    <a href="#">台北班簡介</a>
+                    <a href="#">新竹班簡介</a>
+                    <a href="#">Microsoft證照</a>
+                    <a href="#">校友會-青築未來協會Build the Future</a>
+                    <a href="#">Blog</a>
+                    <a href="#">歷屆老師</a>
+                    <a href="#">問題洽詢</a>
                 </nav>
             </div>
             <div class="ads" style="margin-bottom: 1px; padding-bottom: 1px;">
@@ -37,13 +37,13 @@
                 <p style="font-size: 18px; text-align: center;color: white;margin: auto; font-weight: bold;line-height: 30px;">BUILD SOMETHING AND SOLVE THE PROBLEM,<br/>THAT'S MY STYLE</p>
             </div>            
             <div class="sign">
-                <a href="*">台北班簡介及報名(2022/4/29)</a>
+                <a href="#">台北班簡介及報名(2022/4/29)</a>
             </div>
             <div class="sign">
-                <a href="*">新竹班簡介(2022/2/15)</a>
+                <a href="#">新竹班簡介(2022/2/15)</a>
             </div>
             <div class="sign">
-                <a href="*">招生說明會報名</a>
+                <a href="#">招生說明會報名</a>
             </div>
         </div>
         </div>
@@ -220,7 +220,7 @@
 
     </body>
     <footer>
-        <div class="wrap" style="background-color: #605E5E; height: 3px ; margin-top: 5px;"></div>
+        <div class="wrap" style="background-color: #605E5E; height: 3px ;"></div>
         <div class="wrap" style="background-color: #EEEEEE;">
             <div class="info">
                 <h5>合作與接洽</h5>
