ADD week4 and pokemon

--- a/hw_week4_1/index.html
+++ b/hw_week4_1/index.html
@@ -4,12 +4,331 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MAIKON</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
-    
+    <input type="checkbox" id="menu-control">
+    <header>
+        <div class="menu">
+            <h1><img src="img/logo-retina.webp" alt="MAIKON"></h1>
+            <label for="menu-control" class="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+                <nav>
+                    <label for="menu-control" class="close-menu">
+                        <span></span>
+                        <span></span>
+                    </label>
+                    <a href="*">Home</a>
+                    <a href="*">About</a>
+                    <a href="*">Services</a>
+                    <a href="*">Team</a>
+                    <a href="*">Case stidio</a>
+                    <a href="*">Contacts</a>
+                    <a href="*" class="header_subcribe">SUBCRIBE</a>
+                </nav>
+        </div>
+    </header>
+    <div class="content">
+        <section class="creativity">
+            <div class="col-12 col-md-6">
+                <h2>Our creativity is your success</h2>
+                <p>We break all boundaries if they happen on our way of project’s development!</p>
+                <div class="creativity_interact">
+                    <a href="*" >LEARN MORE</a>
+                    <button>WATCH VIDEO<i class="fas fa-play"></i></button>
+                </div>
+            </div>
+            <div class="col-12 col-md-6">
+                <img src="img/home-image-1.svg" alt="Our creativity is your success">
+            </div>
+        </section>
+        <section class="passion" id="re">
+            <div class="col-12 col-md-5">
+                <h2>Creative challenges are our passion</h2>
+                <p>Our team of designers and developers work closely together to build a creative and positive working environment. Functionality is as important to us as aesthetics.</p>
+                <div class="passion_interact">
+                    <a href="*">ABOUT US</a>
+                    <a href="*">CONTACT US</a>
+                </div>
+            </div>
+            <div class="col-12 col-md-7">
+                <img src="img/home-image-2.webp" alt="Creative challenges are our passion">
+            </div>
+        </section>
+        <section class="servives">
+            <h2>We provide a wide range of creative services</h2>
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <div class="content">
+                        <div class="icon">
+                            <img src="img/icon-1.svg" alt="pen">
+                        </div>
+                        <h3>Web Design & Brending</h3>
+                        <p>A great brand combines design and conveys company’s value messaging to   evoke emotion and drive strategy.</p>
+                        <a href="*">READ MORE</a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="content">
+                        <div class="icon">
+                            <img src="img/icon-2.svg" alt="graph">
+                        </div>
+                        <h3>Graphic Design</h3>
+                        <p>Rich experience plus unlimited imagination create our successful     service discovered by clients.</p>
+                        <a href="*">READ MORE</a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="content">
+                        <div class="icon">
+                            <img src="img/icon-3.svg" alt="gear">
+                        </div>
+                        <h3>Video Production</h3>
+                        <p>Creating and handling professional video is our strong point. It plays   major role in your digital business strategy.</p>
+                        <a href="*">READ MORE</a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="content">
+                        <div class="icon">
+                            <img src="img/icon-4.svg" alt="SEO">
+                        </div>
+                        <h3>SEO</h3>
+                        <p>We provide everything your site needs to perform at it’s highest capabilities on the major search engines.</p>
+                        <a href="*">READ MORE</a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="content">
+                        <div class="icon">
+                            <img src="img/icon-5.svg" alt="pie">
+                        </div>
+                        <h3>Digital Marketing</h3>
+                        <p>We do collateral design, interactive design, hoarding, signage,  presentation centres, and more.</p>
+                        <a href="*">READ MORE</a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="content">
+                        <div class="icon">
+                            <img src="img/icon-6.svg" alt="talkingbox">
+                        </div>
+                        <h3>Infographics</h3>
+                        <p>Turn your data into captivating artwork that will keep your audience     engaged. Our team can help you with it.</p>
+                        <a href="">READ MORE</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contact">
+            <div class="col-12 col-md-5">
+                <h2>If you have any questions, please contact us</h2>
+                <p>Our professional support team try to do their best to provide you with high-quality consultations concerning any question about our services.</p>
+                <div class="contact_interact">
+                    <a href="*">CONTACT US</a>
+                    <a href="*">SUBCRIBE</a>
+                </div>
+            </div>
+            <div class="col-12 col-md-7">
+                <img src="img/home-image-3.svg" alt="plz contact us">
+            </div>
+        </section>
+        <section class="whychooseus">
+            <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6">
+                    <div class="data">
+                        <p>1880+</p>
+                        <p>Completed projects to the end by our specialists.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="data">
+                        <p>56</p>
+                        <p>A large team of the best specialists.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="data">
+                        <p>2000+</p>
+                        <p>Customers who were satisfied with our work.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="data">
+                        <p>100%</p>
+                        <p>Our values are good organization and result orientation.</p>
+                    </div>    
+                </div>
+            </div>
+            <div class="col-12 col-md-6">
+                <h2>Why choose our studio for your projects?</h2>
+                <p>We are a command of professional and enthusiastic people, who like what they do and are always in the process of growing and improving their skills.</p>
+                <a href="*">ORDER SERVICE</a>
+            </div>
+        </section>
+        <section class="steps">
+            <h2>Steps of our work</h2>
+            <div class="step">
+                <div class="col-12 col-md-8">
+                    <div class="col-12 col-md-3">
+                        <span>01</span>
+                    </div>
+                    <div class="col-12 col-md-9">
+                        <h3>Meeting With The Customer</h3>
+                        <p>The first meeting is very import to form contact and discuss the main ideas of the project.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/home-image-4.svg" alt="Meeting">
+                </div>
+            </div>
+            <div class="step">
+                <div class="col-12 col-md-8">
+                    <div class="col-12 col-md-3">
+                        <span>02</span>
+                    </div>
+                    <div class="col-12 col-md-9">
+                        <h3>We Consider And Analyze The Work Plan</h3>
+                        <p>When we understand the main eideas, we proceed to discussing the work plan and analyzing it.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/home-image-5.svg" alt="Report">
+                </div>
+            </div>
+            <div class="step">
+                <div class="col-12 col-md-8">
+                    <div class="col-12 col-md-3">
+                        <span>03</span>
+                    </div>
+                    <div class="col-12 col-md-9">
+                        <h3>Work Hard On The Project</h3>
+                        <p>Our professional team start to handle with your project and embody the conception of the project.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/home-image-6.svg" alt="lazybone">
+                </div>
+            </div>
+            <div class="step">
+                <div class="col-12 col-md-8">
+                    <div class="col-12 col-md-3">
+                        <span>04</span>
+                    </div>
+                    <div class="col-12 col-md-9">
+                        <h3>Once Again We Analyze And Check Everything</h3>
+                        <p>We meet, analyze and check the done work and make needed corrections.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/home-image-7.svg" alt="whiteboard">
+                </div>
+            </div>
+            <div class="step">
+                <div class="col-12 col-md-8">
+                    <div class="col-12 col-md-3">
+                        <span>05</span> 
+                    </div>
+                    <div class="col-12 col-md-9">
+                        <h3>We Finish The Work And Give It To The Customer</h3>
+                        <p>The project is ready and we give it to the customer. Also we ask for the feedback from the customer.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/home-image-8.svg" alt="highfive">
+                </div>
+            </div>
+        </section>
+        <section class="projects">
+                <h2>Our team's work with Projects</h2>
+                <a href="*">ALL PROJECTS</a>
+            <div class="projects_row">
+                <div class="col-12 col-md-4">
+                    <img src="img/project-1.webp" alt="Impuls">
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/project-2.webp" alt="TourUp">
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/project-3.webp" alt="LittleItaly">
+                </div>
+            </div>
+        </section>
+        <section class="sign">
+            <div class="col-12 col-md-6">
+                <img src="img/home-image-9.svg" alt="UsingYourPhone">
+            </div>
+            <div class="col-12 col-md-6">
+                <h2>Sign up for our consultation</h2>
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Meaasge"></textarea>
+                <button>SEND</button>
+            </div>
+        </section>
+        <section class="subcribe">
+            <h2>Subscribe to our news and learn more</h2>
+            <div class="col-12 col-md-6">
+                <input type="email" placeholder="your email">
+                <button>SUBCRIBE</button>   
+            </div>
+        </section>
+    </div>
+    <footer>
+        <div class="about_row">
+            <div class="col-12 col-md-3">
+                <address>
+                    <a href="*"><img src="img/logo-retina.webp" alt="Logo"></a>
+                    <a href="*"><span>Phone:</span>+1(045)-224-12-67</a>
+                    <a href="*"><span>Mail:</span>info@demolink.org </a>
+                </address>
+            </div>
+            <div class="col-12 col-md-3">
+                <h2>Services</h2>
+                <ul>
+                    <li><a href="*">Web design & brending</a></li>
+                    <li><a href="*">Web development</a></li>
+                    <li><a href="*">Full Optimization</a></li>
+                    <li><a href="*">Research & Strategy</a></li>
+                    <li><a href="*">Management & Marketing</a></li>
+                    <li><a href="*">Free Support</a></li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-3">
+                <h2>About Company</h2>
+                <ul>
+                    <li><a href="*">About us</a></li>
+                    <li><a href="*">Team</a></li>
+                    <li><a href="*">Case Studio</a></li>
+                    <li><a href="*">Contacts</a></li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-3">
+                <h2>Our Social Networks</h2>
+                <p>Join us in the social networks and keep up on the latest news.</p>
+                <div class="social">
+                    <a href="*"><i class="fab fa-youtube"></i></a>
+                    <a href="*"><i class="fab fa-facebook-f"></i></a>
+                    <a href="*"><i class="fab fa-instagram"></i></a>
+                    <a href="*"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="right">
+            <p>Copyright © 2018 Wordpress Maikon. All Rights Reserved. | Theme design by <a href="*">Zemez</a>
+            </p>
+            <a href="*">Privacy & Policy</a>
+            <a href="*">FAQ</a>
+        </div>
+
+</footer>
 </body>
 </html>
