--- a/FoodBar/FoodBar.html
+++ b/FoodBar/FoodBar.html
@@ -255,6 +255,18 @@
         steps = ramdom + (3 * foodArray.length)// v2 讓他多跑幾圈
         allsteps = steps
         barSpin()
+        const selectedStore = eatWhere.firstChild.innerText
+        console.log(selectedStore)
+        // console.log(foodArray[currentIndex-1].name)
+        dishArray = [].concat(foodArray.find(x => x.name == selectedStore).menu)
+        console.log(dishArray)
+
+        eatWhatspeed = 200 //因為Speed是變數，所以每次都要將速度調回預設
+
+        let eatWhatRamdom = Math.floor(Math.random() * dishArray.length) + 1
+        eatWhatSteps = eatWhatRamdom+(3 * foodArray.length)// v2 讓他多跑幾圈
+        allEatWhatSteps = eatWhatSteps
+
       }
     }
 
@@ -279,28 +291,16 @@
         //加速
         //搭配v2，以剩餘部署搭配變速，當剩餘步數剩下1/3時減速
         if (steps <= Math.floor(allsteps / 3)) {
-          speed += 7
+          speed += 20
         } else {
           speed -= 1//加速
         }
-      } else {
+      }else{
         dishBarSpin()
       }
     }
 
     function dishBarSpin(){  
-      const selectedStore = eatWhere.firstChild.innerText
-        console.log(selectedStore)
-        // console.log(foodArray[currentIndex-1].name)
-        dishArray = [].concat(foodArray.find(x => x.name == selectedStore).menu)
-        console.log(dishArray)
-
-        speed = 50 //因為Speed是變數，所以每次都要將速度調回預設
-
-        let eatWhatRamdom = Math.floor(Math.random() * dishArray.length) + 1
-        eatWhatSteps = eatWhatRamdom + (3 * dishArray.length)// v2 讓他多跑幾圈
-        allEatWhatSteps = eatWhatSteps
-
         let dishName = document.createElement('p')
         dishName.innerText = dishArray[eatWhatCurrentIndex].dish
         eatWhat.appendChild(dishName)
@@ -315,16 +315,16 @@
         //判斷走完、未走完的動作
         if (eatWhatSteps > 0) {
           //還沒走完
-          setTimeout(dishBarSpin, eatWhatspeed) //判斷沒走完，就在0.05秒後再走一步
+          setTimeout(dishBarSpin, eatWhatspeed) //判斷沒走完，就再走一步
           //加速
-          //搭配v2，以剩餘部署搭配變速，當剩餘步數剩下1/3時減速
+          //搭配v2，以剩餘步數搭配變速，當剩餘步數剩下1/3時減速
           if (eatWhatSteps <= Math.floor(allEatWhatSteps / 3)) {
-            eatWhatspeed += 7
+            eatWhatspeed += 20
           } else {
             eatWhatspeed -= 1//加速
           }
         }else {
-          msgShow.innerText = `今天吃${dishArray[eatWhatCurrentIndex].dish} 要花${dishArray[eatWhatCurrentIndex].price}`
+          msgShow.innerText = `今天吃${dishArray[eatWhatCurrentIndex-1].dish} 要花${dishArray[eatWhatCurrentIndex].price}元`
       }
     }
   </script>
